# hoopmetrics

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  costs.md  docker-compose.yml  environment.yaml  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
config/: base_config.py
config/sports/: nba.yaml
data/cache/: players_LAL.json  players_PHI.json  players_all.json
data/debug/: raw_response.html
data/test/debug/: page.html  raw_response.html
infrastructure/bicep/: main.bicep
infrastructure/bicep/modules/: aks.bicep  cosmosdb.bicep  keyvault.bicep  ml.bicep  storage.bicepstorage.bicep
public/images/collage/: README.md
scripts/: run_pipeline.py  run_scraper_tests.py
src/: App.tsx  index.css  main.tsx
src/api/: app.py  config.py  games_.py  models.py
src/components/: BackgroundCollage.tsx  ErrorBoundary.tsx  LandingPage.tsx  Pagination.tsx  PlayerCard.tsx  PlayerDashboard.tsx  PlayerImage.tsx  PlayerList.tsx  PlayerProfile.tsx  PlayerSelector.tsx  PlayerStats.tsx  SearchFilters.tsx  StatsChart.tsx  StatsToggle.tsx
src/config/: config_manager.py  dev.yaml
src/data/: mockPlayers.ts  teamColors.ts
src/data_processing/: etl_pipeline.py
src/frontend/: package-lock.json  package.json  tsconfig.json
src/hooks/: useNbaPlayer.ts  useNbaPlayers.ts  usePlayerGameStats.ts  usePlayerSeasonStats.ts
src/lib/: api.ts  imageUrls.ts
src/ml/: player_performance.yaml
src/types/: player.ts
src/utils/: imageCache.ts  performance.ts
tests/unit/: test_scraper.py
(+38 files in other folders)
