[tool.poetry]
name = "hoopmetrics"
version = "0.1.0"
description = "NBA Analytics Pipeline"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.0"
scikit-learn = "^1.0.0"
fastapi = "^0.75.0"
azure-storage-blob = "^12.0.0"
beautifulsoup4 = "^4.11.0"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"

